--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.notes-ai"
+      "bundleIdentifier": "com.MASTER"
     },
     "web": {
       "favicon": "./assets/favicon.png"
